--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/icon/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'none'; connect-src * data:; script-src 'self' 'wasm-unsafe-eval'; frame-src 'self' data: https:; style-src 'self' 'unsafe-inline'; img-src 'self' blob: data: https:; media-src 'self' blob: https://www.mustang.im; font-src 'self';">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'none'; connect-src * data:; script-src 'self' 'wasm-unsafe-eval'; frame-src 'self' data: blob: https:; style-src 'self' 'unsafe-inline'; img-src 'self' blob: data: https:; media-src 'self' blob: https://www.mustang.im; font-src 'self';">
 </head>
 
 <body>
